--- a/adit/index.html
+++ b/adit/index.html
@@ -3,7 +3,15 @@
 <head>
   <link rel="style.css" href="style.css"type="type/css"/>
 </head>
-<body>
-<h1>Hello coursera web developer!</h1>
+<body style="background-color: blue">
+  <body>
+    <h1>Hello coursera web developer!</h1>
+    <p 
+    style="color:#f59d1f;"> We have developed more then 100 million courses.</p>
+    <p 
+    style="color:yellow"> Amazing opportunity.</p>
+    <p style="font-size: 50px"> Thank you to see my web.</p>
+  </body>
+
 </body>
 </html>
